[package]
name = "meshtastic-repeater"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.11.1"
protoc-bin-vendored = "3.0.0"
walkdir = "2.3.2"

[dependencies]
lru = "0.12.0"
prost = "0.11.0"
rand = "0.8.5"
